# projeto-docker

./: .dockerignore  .env  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
