[tool.poetry]
name = "fastapi-docker-exercise"
version = "0.1.0"
description = "Exercício de FastAPI com Docker e Poetry"
authors = ["Seu Nome <seu@email.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"